# djakart

./: .env  .gitignore  000-default.conf  MANIFEST.in  README.md  docker-compose.yml  init.sql  initdb.sh  nginx.conf  pyproject.toml
.github/workflows/: build.yml  build_deploy_run.yml
build_nginx/: Dockerfile  docker-entrypoint.sh
build_qgis/: Dockerfile
build_webapp/: Dockerfile
djakart/: admin.py  aggiorna_privilegi_pg.py  apps.py  diff-view.readme  kart_api.py  models.py  tests.py  views.py
djakart.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
djakart/migrations/: 0003_basemap_depth_basemap_srid.py  0004_alter_modelli_options_version_extent_and_more.py  0005_version_crs_alter_basemap_request_params_and_more.py
djakart/otf_qgisserver_plugin/: __init__.py
djakart/otf_qgisserver_plugin/filters/: layer_definition_NOTMIGRATED.py  tools.py
djakart/static/djakart/: generate_diff.js  versioni_finestramappa.js
djakart/templates/: tutte_le_versioni.js
djakart/templates/admin/: action_confirmation.html  action_parameter.html
djakart/test/: b0101_vincoli.gpkg
kart_versions/: readme.txt
main_app/: settings.py  wsgi.py
media/: readme.txt
webapp/: requirements.txt
webapp/djakart/: QGS_project_macro.py  admin.py  diff-view.html  kart_api.py  models.py  prototipo.gpkg  tests.py  urls.py  views.py
webapp/djakart/migrations/: 0001_initial.py  0002_basemap.py  0006_version_reserved_ids_alter_version_crs_and_more.py
webapp/djakart/otf_qgisserver_plugin/: otf_project.py
webapp/djakart/sql/: cs_blob.sql.txt  fdw.sql.txt  pi2030.sql.txt  pi_blob.sql.txt
webapp/djakart/templates/: PUB_template.qgs  PUB_template_OK.qgs  diff-view.html  log.html  (+1 more)
webapp/main_app/: asgi.py  settings.py  urls.py
(+13 files in other folders)
