[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]  # list of folders that contain the packages (["."] by default)
include = ["djakart"]  # package names should match these glob patterns (["*"] by default)
exclude = []  # exclude packages matching these glob patterns (empty by default)
namespaces = false  # to disable scanning PEP 420 namespaces (true by default)

[project]
name = "djakart"
version = "0.3"
dependencies = [
    "django>=4.0",
    "asgiref",
    "certifi",
    "charset-normalizer",
    "django-object-actions",
    "GDAL>=3.4.3",
    "idna",
    "numpy",
    "psycopg2-binary",
    "requests",
    "sqlparse",
    "urllib3",
]
description = "A django wrapper to kart geospatial versioning tool "
readme = "README.md"
requires-python = ">= 3.8"
authors = [
    {name = "Enrico Ferreguti", email = "enricofer@gmail.com"},
]
classifiers = [
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 4.0",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GPL2 License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]

[project.urls]
Homepage = "https://github.com/enricofer/djakart"